numpy assignment done

--- a/Intro-of-PY/Ostad/Week-5/Numpy/OS-MOD/NumPy_Essentials_Assignment.ipynb
+++ b/Intro-of-PY/Ostad/Week-5/Numpy/OS-MOD/NumPy_Essentials_Assignment.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -180,13 +180,14 @@
        "array([0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linspace(0, 0, 5)"
+    "# np.linspace(0, 0, 5)\n",
+    "np.zeros(5)"
    ]
   },
   {
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -227,13 +228,14 @@
        "       [0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linspace(0, 0, 12).reshape(3, 4)"
+    "# np.linspace(0, 0, 12).reshape(3, 4)\n",
+    "np.zeros(12).reshape(3, 4)"
    ]
   },
   {
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -259,7 +261,7 @@
     }
    ],
    "source": [
-    "print(np.full(5, 1.0))"
+    "print(np.ones(5))"
    ]
   },
   {
@@ -707,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -722,18 +724,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "linespace() and arange() are both functions used in Python, but they serve different purposes within different libraries.\n",
+    "\n",
+    "numpy.linspace() is a function from the NumPy library used to create an array of evenly spaced values within a specified range. It takes in parameters for start, stop, and the number of elements you want and returns evenly spaced numbers over that interval.\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "values = np.linspace(0, 10, 5)\n",
+    "print(values)\n",
+    "This would produce an array with five evenly spaced numbers between 0 and 10: [0.0, 2.5, 5.0, 7.5, 10.0]\n",
+    "\n",
+    "\n",
+    "numpy.arange() is another NumPy function that generates an array of values within a given range with a specified step size. It takes parameters for start, stop, and step size.\n",
+    "\n",
+    "for example: \n",
+    "\n",
+    "values = np.arange(0, 10, 2)\n",
+    "print(values)\n",
+    "\n",
+    "This would create an array starting from 0 and incrementing by 2 until it reaches, but does not include, 10: [0, 2, 4, 6, 8].\n",
+    "\n",
+    "so we can say, the main difference lies in how they generate sequences of numbers: linspace() generates a specified number of evenly spaced values, while arange() generates values with a specified step size.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**15. How to generate a single random integer number using NumPy built-in function?**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# To avoid overwriting the output, please code here "
+    "rand_int = np.random.randint(0, 51)\n",
+    "rand_int"
    ]
   },
   {
@@ -753,13 +796,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.65237796 0.0842355  0.11729911 0.23592122 0.41787534]\n",
+      " [0.73796958 0.83935754 0.9446391  0.28382676 0.18916657]\n",
+      " [0.50633342 0.31447354 0.36478581 0.73346866 0.8421393 ]\n",
+      " [0.34091029 0.83491929 0.58819626 0.23672204 0.11330842]\n",
+      " [0.89579036 0.27201897 0.89044015 0.5804819  0.11979752]\n",
+      " [0.93658856 0.95659917 0.85452048 0.14127431 0.10652084]\n",
+      " [0.41316574 0.06160727 0.95355429 0.9504992  0.75017125]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# To avoid overwriting the output, please code here "
+    "rand_num_matrix = np.random.rand(35).reshape(7, 5)\n",
+    "print(rand_num_matrix)"
    ]
   },
   {
@@ -792,13 +850,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5., 0., 0., 0., 0.],\n",
+       "       [0., 5., 0., 0., 0.],\n",
+       "       [0., 0., 5., 0., 0.],\n",
+       "       [0., 0., 0., 5., 0.],\n",
+       "       [0., 0., 0., 0., 5.]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# To avoid overwriting the output, please code here "
+    "np.eye(5) * 5"
    ]
   },
   {
