pandas dataframe update

--- a/Intro-of-PY/Ostad/Week-5/Pandas/intro.ipynb
+++ b/Intro-of-PY/Ostad/Week-5/Pandas/intro.ipynb
@@ -337,9 +337,81 @@
     "    ('2023-01-03', 34, 9, 'Sunny'),\n",
     "]\n",
     "\n",
-    "df = pd.DataFrame(data= climet_data, columns=['day', 'temperature', 'windspeed', 'event'])\n",
+    "df = pd.DataFrame(data = climet_data, columns=['day', 'temperature', 'windspeed', 'event'])\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>Windspeed</th>\n",
+       "      <th>events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-01-02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-01-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          day  temp  Windspeed  events\n",
+       "0  2023-01-01   NaN        NaN     NaN\n",
+       "1  2023-01-02   NaN        NaN     NaN\n",
+       "2  2023-01-03   NaN        NaN     NaN"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -347,6 +419,296 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>27</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-01-02</td>\n",
+       "      <td>27</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-01-03</td>\n",
+       "      <td>27</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Cloudy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          day  temperature  windspeed   event\n",
+       "0  2023-01-01           27          3  Cloudy\n",
+       "1  2023-01-02           27          3  Cloudy\n",
+       "2  2023-01-03           27          3  Cloudy"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using List Of Dictionary\n",
+    "climet_data = [\n",
+    "    {'day' : '2023-01-01', 'temperature' : 27, 'windspeed' : 3, 'event' : 'Cloudy'},\n",
+    "    {'day' : '2023-01-02', 'temperature' : 27, 'windspeed' : 3, 'event' : 'Cloudy'},\n",
+    "    {'day' : '2023-01-03', 'temperature' : 27, 'windspeed' : 3, 'event' : 'Cloudy'}\n",
+    "    ]\n",
+    "df = pd.DataFrame(data= climet_data, columns=['day', 'temperature', 'windspeed', 'event'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Rent</th>\n",
+       "      <th>Service Charge</th>\n",
+       "      <th>Wifi</th>\n",
+       "      <th>Current</th>\n",
+       "      <th>Bua</th>\n",
+       "      <th>Extra Cost</th>\n",
+       "      <th>Per Person</th>\n",
+       "      <th>Have To Pay</th>\n",
+       "      <th>Take From</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Md Al Amin</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>750</td>\n",
+       "      <td>500</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>625.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>9150</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Kaysar</td>\n",
+       "      <td>2250</td>\n",
+       "      <td>750</td>\n",
+       "      <td>500</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>625.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>4400</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Shahin</td>\n",
+       "      <td>2250</td>\n",
+       "      <td>750</td>\n",
+       "      <td>500</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>625.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>4400</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Shihab</td>\n",
+       "      <td>4750</td>\n",
+       "      <td>750</td>\n",
+       "      <td>300</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>625.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6700</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Omlan</td>\n",
+       "      <td>4750</td>\n",
+       "      <td>750</td>\n",
+       "      <td>300</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>625.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6700</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6720.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Eram</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>750</td>\n",
+       "      <td>300</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>625.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>4950</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Musfiq</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>750</td>\n",
+       "      <td>300</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>625.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>4950</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Kamrul</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>750</td>\n",
+       "      <td>300</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>625.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>4950</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Extra-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>46200</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>46620.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Name   Rent  Service Charge  Wifi  Current     Bua  Extra Cost  \\\n",
+       "0  Md Al Amin   7000             750   500    250.0   625.0          25   \n",
+       "1      Kaysar   2250             750   500    250.0   625.0          25   \n",
+       "2      Shahin   2250             750   500    250.0   625.0          25   \n",
+       "3      Shihab   4750             750   300    250.0   625.0          25   \n",
+       "4       Omlan   4750             750   300    250.0   625.0          25   \n",
+       "5        Eram   3000             750   300    250.0   625.0          25   \n",
+       "6      Musfiq   3000             750   300    250.0   625.0          25   \n",
+       "7      Kamrul   3000             750   300    250.0   625.0          25   \n",
+       "8     Extra-1      0               0     0      NaN     NaN           0   \n",
+       "9       Total  30000            6000  3000   2000.0  5000.0         200   \n",
+       "\n",
+       "   Per Person  Have To Pay  Take From  \n",
+       "0        9150          NaN     9200.0  \n",
+       "1        4400          NaN     4500.0  \n",
+       "2        4400          NaN     4500.0  \n",
+       "3        6700          NaN     6700.0  \n",
+       "4        6700          NaN     6720.0  \n",
+       "5        4950          NaN     5000.0  \n",
+       "6        4950          NaN     5000.0  \n",
+       "7        4950          NaN     5000.0  \n",
+       "8           0          NaN        NaN  \n",
+       "9       46200          0.0    46620.0  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_clipboard()\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
