--- a/Python-Libraries_and_OOPs/Ostad-PY-Libraries/Week-6/Project/CodeBasics/heandeling-NAn/groupby.ipynb
+++ b/Python-Libraries_and_OOPs/Ostad-PY-Libraries/Week-6/Project/CodeBasics/heandeling-NAn/groupby.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +166,7 @@
        "11  1/4/2017     paris           42         10  Cloudy"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +191,7 @@
        "Name: temperature, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +263,7 @@
        "3  1/4/2017  new york"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +283,7 @@
        "256"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +317,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -469,13 +476,228 @@
        "11  1/4/2017     paris           42         10  Cloudy"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.drop_duplicates()"
+    "df.drop_duplicates()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "city\n",
+       "mumbai      4\n",
+       "new york    4\n",
+       "paris       4\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.value_counts(df['city'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>city</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2017</td>\n",
+       "      <td>new york</td>\n",
+       "      <td>32</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/2/2017</td>\n",
+       "      <td>new york</td>\n",
+       "      <td>36</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/3/2017</td>\n",
+       "      <td>new york</td>\n",
+       "      <td>28</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Snow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/4/2017</td>\n",
+       "      <td>new york</td>\n",
+       "      <td>33</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/1/2017</td>\n",
+       "      <td>mumbai</td>\n",
+       "      <td>90</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1/2/2017</td>\n",
+       "      <td>mumbai</td>\n",
+       "      <td>85</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Fog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1/3/2017</td>\n",
+       "      <td>mumbai</td>\n",
+       "      <td>87</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Fog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1/4/2017</td>\n",
+       "      <td>mumbai</td>\n",
+       "      <td>92</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1/1/2017</td>\n",
+       "      <td>paris</td>\n",
+       "      <td>45</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1/2/2017</td>\n",
+       "      <td>paris</td>\n",
+       "      <td>50</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1/3/2017</td>\n",
+       "      <td>paris</td>\n",
+       "      <td>54</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1/4/2017</td>\n",
+       "      <td>paris</td>\n",
+       "      <td>42</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Cloudy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         day      city  temperature  windspeed   event\n",
+       "0   1/1/2017  new york           32          6    Rain\n",
+       "1   1/2/2017  new york           36          7   Sunny\n",
+       "2   1/3/2017  new york           28         12    Snow\n",
+       "3   1/4/2017  new york           33          7   Sunny\n",
+       "4   1/1/2017    mumbai           90          5   Sunny\n",
+       "5   1/2/2017    mumbai           85         12     Fog\n",
+       "6   1/3/2017    mumbai           87         15     Fog\n",
+       "7   1/4/2017    mumbai           92          5    Rain\n",
+       "8   1/1/2017     paris           45         20   Sunny\n",
+       "9   1/2/2017     paris           50         13  Cloudy\n",
+       "10  1/3/2017     paris           54          8  Cloudy\n",
+       "11  1/4/2017     paris           42         10  Cloudy"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.describe of 0     32\n",
+       "1     36\n",
+       "2     28\n",
+       "3     33\n",
+       "4     90\n",
+       "5     85\n",
+       "6     87\n",
+       "7     92\n",
+       "8     45\n",
+       "9     50\n",
+       "10    54\n",
+       "11    42\n",
+       "Name: temperature, dtype: int64>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['temperature'].describe"
    ]
   }
  ],
