--- a/Python-Libraries_and_OOPs/Ostad-PY-Libraries/Week-11-Feature-Enginnering/Feature-Enginnering/Code/data_one_hot_encoding.ipynb
+++ b/Python-Libraries_and_OOPs/Ostad-PY-Libraries/Week-11-Feature-Enginnering/Feature-Enginnering/Code/data_one_hot_encoding.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "12      robinsville  3600  695000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -281,19 +281,19 @@
        "12            False         True         False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dummies = pd.get_dummies(df.town)\n",
+    "dummies = pd.get_dummies(df['town'])\n",
     "dummies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "12      robinsville  3600  695000            False         True         False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        "12  3600  695000            False         True         False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
