csv data to json data conversion

--- a/Python-Libraries_and_OOPs/Ostad-PY-Libraries/Module-15/ANN/Digits_recognition_neural_network.ipynb
+++ b/Python-Libraries_and_OOPs/Ostad-PY-Libraries/Module-15/ANN/Digits_recognition_neural_network.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:blue\" align=\"center\">Handwritten digits classification using neural network</h2>"
+    "<h2 style=\"color:green\" align=\"center\">Handwritten digits classification using neural network</h2>"
    ]
   },
   {
