--- a/CSE445/Assignments/Assignment-2/new.ipynb
+++ b/CSE445/Assignments/Assignment-2/new.ipynb
@@ -158,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 197.72560000000004\n",
-      "Mean Absolute Error: 10.588\n",
-      "R-squared: 33.353557252567064\n"
+      "Mean Squared Error: 179.47111111111113\n",
+      "Mean Absolute Error: 10.213333333333333\n",
+      "R-squared: 39.506512401606884\n"
      ]
     }
    ],
@@ -196,7 +196,7 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Build the KNN regression model\n",
-    "k = 5  # Number of neighbors\n",
+    "k = 3  # Number of neighbors\n",
     "knn_model = KNeighborsRegressor(n_neighbors=k)\n",
     "knn_model.fit(X_train, y_train)\n",
     "\n",
