build final model for my project

--- a/CSE445/Assignments/Final-Assignment-2/Assignment-2.ipynb
+++ b/CSE445/Assignments/Final-Assignment-2/Assignment-2.ipynb
@@ -1655,7 +1655,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.value_counts('')"
+   ]
   }
  ],
  "metadata": {
