--- a/CSE445/Final-Project/Model/KNN/knn-levENC-scaling.ipynb
+++ b/CSE445/Final-Project/Model/KNN/knn-levENC-scaling.ipynb
@@ -1053,11 +1053,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_predict = knn.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        High       0.54      0.72      0.62        18\n",
+      "         Low       0.62      0.79      0.69        33\n",
+      "      Medium       0.48      0.39      0.43        28\n",
+      " Medium-High       0.50      0.23      0.32        13\n",
+      "  Medium-Low       0.71      0.66      0.68        44\n",
+      "\n",
+      "    accuracy                           0.60       136\n",
+      "   macro avg       0.57      0.56      0.55       136\n",
+      "weighted avg       0.60      0.60      0.59       136\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_predict))"
    ]
   }
  ],
